Icelandic.NET/Icelandic.ATG
COMPILER Icelandic

CHARACTERS
  letter = "AÁBCDÐEÉFGHIÍJKLMNOÓPQRSTUÚVWXYZÞÆÖaábcdðeéfghiíjklmnoópqrstuúvwxyzþæö_".
  digit = "0123456789".
  cr  = '\r'.
  lf  = '\n'.
  tab = '\t'.

TOKENS
  ident  = letter {letter | digit}.
  number = digit {digit}.


IGNORE cr + lf + tab

PRODUCTIONS


Icelandic<> 
=	
    Stmt<> 
    {Stmt<>} 
.

Stmt<>
=
	( VarDec<> 
	| Assign<>
	| If<>
	| While<>
	)
	'.'
.

VarDec<>
=
	"Breytan" 
	ident                 
    "er"
    ("heiltala"|"textastrengur"|"sannleiksgildi")
.

Assign<>
=	ident                       
	"verður"
	Expr<>                      
.

If<>
=
	"Ef"
	Expr<>
	"þá" "gerist" ("eftirfarandi"|"þetta") ":"
	Icelandic<>
    
    (
        ("Og" "þarmeð" "er" "skilyrðinu" "lokið")
        |
        ("Hér" "endar" "skilyrðið")
    )
.

While<>
=
	"while"
	"do"
	"od"
.

Expr<>
=
    ident
.
END Icelandic.
